--- a/web/index.html
+++ b/web/index.html
@@ -12,13 +12,13 @@
             <div class="row nav text-light w-100 bg-danger d-flex justify-content-between">
                 <p class="nav nav-link">Сетевая библиотека</p>
                 <ul class="nav nav-item d-flex justify-content-end ">
-                    <li class="nav-item">
-                      <a class="nav-link  text-light"  href="#">Active</a>
+                    <li id="printNewBookForm" class="nav-item" style="display: none;">
+                      <a class="nav-link  text-light"  href="#" >Добавить книгу</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light"  href="#">Link</a>
+                    <li id="printListBooksForm" class="nav-item" style="display: none;" >
+                      <a class="nav-link text-light"  href="#" >Список книг</a>
                     </li>
-                    <li id="sysout" class="nav-item">
+                    <li id="sysout" class="nav-item" style="display: none;">
                       <a  class="nav-link text-light" href="#">Выход</a>
                     </li>
                     <li id="enter-menu" class="nav-item">
