--- a/web/proba.html
+++ b/web/proba.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>TODO supply a title</title>
@@ -30,7 +29,7 @@
             <div id="info" class="w-100 text-center"></div>
             <div id="content">
                <div class="row mt-5 w-100 d-flex justify-content-center">
-               <div class="card border-primary p-2" style="max-width: 30rem;">
+               <div class="card border-danger p-2" style="max-width: 30rem;">
                   <div class="card-header text-center">Введите логин и пароль</div>
                   <div class="card-body">
                     <p class="card-text d-flex justify-content-between">Логин: <input class="ml-2" type="text" id="login"></p>
